<resources>
    <string name="app_name">PerluDilindungi13</string>
    <!--    for menu title-->
    <string name="article_menu_title">News</string>
    <string name="location_menu_title">Lokasi Vaksin</string>
    <string name="bookmark_menu_tittle">Bookmark</string>

    <string name="cari_faskes">Cari Faskes</string>
    <string name="title_activity_show_faskes">ShowFaskesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nama_faskes">Nama Faskes</string>
    <string name="kode_faskes">Kode Faskes</string>
    <string name="alamat_faskes">Alamat Faskes</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="jenis_faskes">Jenis Faskes</string>
    <string name="status">Status</string>
    <string name="bookmark">Bookmark</string>
    <string name="go_to_bookmark">Go To Bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>