<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaskesActivity">

    <TextView
        android:id="@+id/nama_faskes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="113dp"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/nama_faskes"
        app:layout_constraintBottom_toTopOf="@+id/kode_faskes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kode_faskes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/kode_faskes"
        app:layout_constraintBottom_toTopOf="@+id/alamat_faskes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_faskes" />

    <TextView
        android:id="@+id/alamat_faskes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/alamat_faskes"
        app:layout_constraintBottom_toTopOf="@+id/nomor_telepon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kode_faskes" />

    <TextView
        android:id="@+id/nomor_telepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/nomor_telepon"
        app:layout_constraintBottom_toTopOf="@+id/jenis_faskes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alamat_faskes" />

    <TextView
        android:id="@+id/jenis_faskes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/jenis_faskes"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomor_telepon" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/status"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/jenis_faskes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />


</androidx.constraintlayout.widget.ConstraintLayout>